Update Lab1 Collecting the Data (API).ipynb

--- a/Capstone Project/Lab1 Collecting the Data (API).ipynb
+++ b/Capstone Project/Lab1 Collecting the Data (API).ipynb
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1561,7 @@
        "[90 rows x 18 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1587,9 +1587,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FlightNumber       0\n",
+       "Date               0\n",
+       "BoosterVersion     0\n",
+       "PayloadMass        5\n",
+       "Orbit              0\n",
+       "LaunchSite         0\n",
+       "Outcome            0\n",
+       "Flights            0\n",
+       "GridFins           0\n",
+       "Reused             0\n",
+       "Legs               0\n",
+       "LandingPad        26\n",
+       "Block              0\n",
+       "ReusedCount        0\n",
+       "Serial             0\n",
+       "Longitude          0\n",
+       "Latitude           0\n",
+       "BoolBooster        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_falcon9.isnull().sum()"
    ]
@@ -1617,13 +1646,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jupyterlab/conda/envs/python/lib/python3.7/site-packages/pandas/core/generic.py:6619: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return self._update_inplace(result)\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the mean value of PayloadMass column\n",
-    "\n",
-    "# Replace the np.nan values with its mean value"
+    "PayloadMass_avg = data_falcon9['PayloadMass'].mean()\n",
+    "# Replace the np.nan values with its mean value\n",
+    "data_falcon9['PayloadMass'].replace(np.nan, PayloadMass_avg, inplace=True)"
    ]
   },
   {
